--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<html
-  lang="en"
-  class="h-100"
->
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -14,7 +11,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
   >
-  <title>Reservas Piscina Lloret</title>
+  <title>Reservas Piscina Lloret Beautify</title>
 
   <!-- Bootstrap CSS -->
   <link
@@ -46,22 +43,54 @@
       </div>
     </main>
 
-    <footer class="mt-auto text-white-50">
-      <p>Developed by Thor Porcel. <a
+    <footer
+      class="py-3 text-white-50"
+      style="font-size: smaller;"
+    >
+      <p>Developed by <a
+          target="_blank"
+          rel="noopener noreferrer"
           href="https://github.com/Thorstorm"
           class="text-white"
-        >Thor Porcel</a>. Open source <a
-          href="https://twitter.com/mdo"
-          class="text-white"
-        >@mdo</a>.</p>
+        >Thor Porcel</a>.</p>
+      <p>An Open Source project</p>
+      <p class="mb-0"><i><svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-github"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+            />
+          </svg></i><a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://github.com/Thorstorm/reservas-lloret-piscina-beautify"
+          class="text-white ml-1"
+        >code</a></p>
     </footer>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script type="text/javascript" src="./lib/jquery/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="./lib/popperjs/popper.min.js"></script>
-  <script type="text/javascript" src="./lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./js/popup.js"></script>
+  <script
+    type="text/javascript"
+    src="./lib/jquery/jquery-3.6.0.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="./lib/popperjs/popper.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="./lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="./js/popup.js"
+  ></script>
 </body>
 
 </html>
